@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>lucene_solr_trunk</name>
+	<name>@ECLIPSEPROJECTNAME@</name>
 	<comment></comment>
 	<projects>
 	</projects>
